RESOLVED FIXED136685
REGRESSION (WebKit2): -webkit-touch-callout: none has no effect
https://bugs.webkit.org/show_bug.cgi?id=136685
Summary REGRESSION (WebKit2): -webkit-touch-callout: none has no effect
Enrica Casucci
Reported 2014-09-09 16:08:21 PDT
Steps to reproduce: 1) Create a page with an <a> 2) Add a rule of: -webkit-touch-callout: none; to the <a> 3) Load the page in Safari or WKWebView in iOS 8 beta seed 4 4) Tap and hold the <a> Result: Callout appears Expected result: No callout appears.  rdar://problem/17629840
Attachments
Patch (4.34 KB, patch)
2014-09-09 16:14 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-09-09 16:14:20 PDT
Enrica Casucci
Comment 2 2014-09-10 17:05:40 PDT
Committed revision 173450.
Jim Evans
Comment 3 2015-03-16 15:29:18 PDT
This still easily repros on iOS 8.1.3 (12B466). Follow the exact repro steps above, or go to this trivial fiddle: http://jsfiddle.net/vhy8h78q/ . This is causing some pain in our product; a fix would be most appreciated. I don't have the privileges to reopen this bug; please let me know if you'd like me to file a new one. --- Here are some other users from the web who reported hitting the same problem since this bug was marked fixed: http://stackoverflow.com/questions/28366499/javascript-disable-context-menu-on-long-press-on-anchor-tag-in-ios-8-safari https://twitter.com/marcoarment/status/517380498159857665
Jim Evans
Comment 4 2015-03-16 15:43:24 PDT
Regression: Meant to mention that this is Safari (on iOS 8.1.3 as stated). Safari on iOS7 (7.0.4) doesn't have this problem, so it is a regression. FWIW, Chrome 33.0.1750.517 on Android 4.4.2 also works fine (lacks this problem).
Jim Evans
Comment 5 2015-03-19 13:52:18 PDT
Note that this still repros on iOS 8.2 (12D508), in Safari. I also filed Apple bug 20228697, referencing this WebKit bug, requesting that the fix be picked up in the released product. Per Apple custom, that bug is not publicly visible / linkable.
Note You need to log in before you can comment on or make changes to this bug.