REGRESSION (WebKit2): -webkit-touch-callout: none has no effect. https://bugs.webkit.org/show_bug.cgi?id=136685 rdar://problem/17629840

Reviewed by Benjamin Poulain.

We need to check if the touch callout is enabled for the element before starting
the long press gesture.
The information about the touch callout is returned together with the rest of data
returned by the InteractionInformationAtPosition.

* Shared/InteractionInformationAtPosition.cpp:
(WebKit::InteractionInformationAtPosition::encode):
(WebKit::InteractionInformationAtPosition::decode):
* Shared/InteractionInformationAtPosition.h:
(WebKit::InteractionInformationAtPosition::InteractionInformationAtPosition):
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _actionForLongPress]):
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/154500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173450 268f45cc-cd09-0410-ab3c-d52691b4dbfc