Source/WebKit2/Shared/InteractionInformationAtPosition.h
@@ -43,6 +43,7 @@ struct InteractionInformationAtPosition {
         : nodeAtPositionIsAssistedNode(false)
         , isSelectable(false)
         , isNearMarkedText(false)
+        , touchCalloutEnabled(true)
     {
     }
 
@@ -50,6 +51,7 @@ struct InteractionInformationAtPosition {
     bool nodeAtPositionIsAssistedNode;
     bool isSelectable;
     bool isNearMarkedText;
+    bool touchCalloutEnabled;
     String clickableElementName;
     String url;
     String title;
